k8/ingress/keycloak.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
   - http:
       paths:
        - path: /auth/
          pathType: Prefix
          backend:
            service:
              name: keycloak-service-lb
              port:
                number: 443
